test/fail/vt_match05.v3
//@seman
type T {
	case M;
}
def m(x: T) {
	match (x) {
		T.M: { }
	}
}
